--- a/templates/apology.html
+++ b/templates/apology.html
@@ -1,12 +1,13 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    home
-{% blockend %}
+    Apology
+{% endblock %}
+
 {% block body %}
 
     <h1>
-        ho
+        {{ bottom }}
     </h1>
 
 {% endblock %}
