--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,10 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="initial-scale=1, width=device-width">
-        <title>hello</title>
+        <title>
+            % block title %
+            % endblock %
+        </title>
     </head>
     <body>
         {% block body %}{% endblock %}
