--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,25 @@
         </title>
     </head>
     <body>
+        <h1>
+            Cat vs Dogs!
+        </h1>
+        {% if session["user_id"] %}
+            <ul class="navbar-nav me-auto mt-2">
+                <li class="nav-item"><a class="nav-link" href="/quote">Quote</a></li>
+                <li class="nav-item"><a class="nav-link" href="/buy">Buy</a></li>
+                <li class="nav-item"><a class="nav-link" href="/sell">Sell</a></li>
+                <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+            </ul>
+            <ul class="navbar-nav ms-auto mt-2">
+                <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+            </ul>
+        {% else %}
+            <ul>
+                <li><a class="nav-link" href="/register">Register</a></li>
+                <li><a class="nav-link" href="/login">Log In</a></li>
+            </ul>
+        {% endif %}
         {% block body %}{% endblock %}
     </body>
 </html>
