--- a/templates/login.html
+++ b/templates/login.html
@@ -2,13 +2,14 @@
 
 {% block body %}
 
-    <h1>
+    <form action="/login" method="post">
         <div>
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
         <div>
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
-    </h1>
+        <button class="btn btn-primary" type="submit">Log In</button>
+    </form>
 
 {% endblock %}
