--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,8 +4,8 @@
     <head>
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>
-            % block title %
-            % endblock %
+            {% block title %}
+            {% endblock %}
         </title>
     </head>
     <body>
