--- a/templates/register.html
+++ b/templates/register.html
@@ -1,18 +1,21 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Login
+    Register
 {% endblock %}
 {% block body %}
 
-    <form action="/login" method="post">
-        <div>
+    <form action="/register" method="post">
+        <div class>
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
         </div>
-        <div>
+        <div class>
             <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <div class>
+            <input class="form-control mx-auto w-auto" id="password" name="confirmation" placeholder="Confirm Password" type="password">
+        </div>
+        <button class type="submit">Log In</button>
     </form>
 
 {% endblock %}
