--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,7 @@
         </title>
     </head>
     <body>
+        <div>
         <h1>
             Cat vs Dogs!
         </h1>
@@ -25,6 +26,7 @@
                 <li><a class="nav-link" href="/login">Log In</a></li>
             </ul>
         {% endif %}
+        </div>
         {% block body %}{% endblock %}
     </body>
 </html>
