--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div>
-        <h1>
+        <h1 text-align: center;>
             Cat vs Dogs!
         </h1>
         {% if session["user_id"] %}
