--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,14 +9,12 @@
         </title>
     </head>
     <body>
+        <nav>
         <div>
-        <h1 text-align: center;>
+        <h1 class="center">
             Cat vs Dogs!
         </h1>
         {% if session["user_id"] %}
-            <ul class="nav">
-
-            </ul>
             <ul class="nav">
                 <a class="nav-link" href="/logout">Log Out</a>
             </ul>
@@ -27,6 +25,7 @@
             </ul>
         {% endif %}
         </div>
+    </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
