--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <div>
-                <h1 class="center">
+                <text class="center">
                     Cat vs Dogs!
                 </h1>
                 {% if session["user_id"] %}
