--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <div>
+            <div class="topnav">
                 <text class="center">
                     Cat vs Dogs!
                 </h1>
