--- a/static/styles.css
+++ b/static/styles.css
@@ -9,7 +9,7 @@ text.center {
 }
 
 .topnav {
-    background-color: #333;
+    background-color: #28acd4;
     overflow: hidden;
   }
   
@@ -17,7 +17,7 @@ text.center {
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 12px 14px;
     text-decoration: none;
     font-size: 17px;
   }
