--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,19 +12,16 @@
     <body>
         <header>
             <div class="topnav">
-                <text class="center">
-                    Cat vs Dogs!
-                </h1>
-                {% if session["user_id"] %}
-                    <ul class="nav">
-                        <a class="nav-link" href="/logout">Log Out</a>
-                    </ul>
-                {% else %}
-                    <ul>
+                <ul class="nav">
+                    <text class="center" color="white">
+                        Cat vs Dogs!
+                    </text>
+                    {% if session["user_id"] %}
+                        <a class="nav-link" href="/logout">Log Out</a>                    
+                    {% else %}
                         <a class="nav-link" href="/register">Register</a>
                         <a class="nav-link" href="/login">Log In</a>
-                    </ul>
-                {% endif %}
+                </ul>
             </div>
         </header>
         {% block body %}{% endblock %}
