--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,6 +21,7 @@
                     {% else %}
                         <a class="nav-link" href="/register">Register</a>
                         <a class="nav-link" href="/login">Log In</a>
+                    {% endif %}
                 </ul>
             </div>
         </header>
