--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,7 @@ ul.nav {
 
 h1 {
     color: #f2f2f2;
+    text-align: center;
 }
 
 .topnav {
@@ -25,4 +26,10 @@ h1 {
   .topnav a:hover {
     background-color: #ddd;
     color: black;
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
   }
