--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <div class="topnav">
+            <div class="topnav container">
                 <ul class="nav">
                     <h1>
                         Cat vs Dogs!
