--- a/static/styles.css
+++ b/static/styles.css
@@ -28,8 +28,6 @@ h1 {
     color: black;
   }
 
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
+  * {
+    background-color: #196880d7;
   }
