--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,12 +16,14 @@
                     <h1>
                         Cat vs Dogs!
                     </h1>
-                    {% if session["user_id"] %}
-                        <a class="nav-link" href="/logout">Log Out</a>                    
-                    {% else %}
-                        <a class="nav-link" href="/register">Register</a>
-                        <a class="nav-link" href="/login">Log In</a>
-                    {% endif %}
+                        <div class="navright">
+                        {% if session["user_id"] %}
+                            <a class="nav-link" href="/logout">Log Out</a>                    
+                        {% else %}
+                            <a class="nav-link" href="/register">Register</a>
+                            <a class="nav-link" href="/login">Log In</a>
+                        {% endif %}
+                    </div>
                 </ul>
             </div>
         </header>
