--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,10 +17,10 @@
                         Cat vs Dogs!
                     </h1>
                     {% if session["user_id"] %}
-                        <a class="nav-link" href="/logout">Log Out</a>                    
+                        <a class="nav-link" style="text-align: right;" href="/logout">Log Out</a>                    
                     {% else %}
-                        <a class="nav-link" href="/register">Register</a>
-                        <a class="nav-link" href="/login">Log In</a>
+                        <a class="nav-link" style="text-align: right;" href="/register">Register</a>
+                        <a class="nav-link" style="text-align: right;" href="/login">Log In</a>
                     {% endif %}
                 </ul>
             </div>
