--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,7 @@
                         Cat vs Dogs!
                     </h1>
                     {% if session["user_id"] %}
+                        <a class="nav-link" style="text-align: right;" href="/post">Make a post</a>    
                         <a class="nav-link" style="text-align: right;" href="/logout">Log Out</a>                    
                     {% else %}
                         <a class="nav-link" style="text-align: right;" href="/register">Register</a>
