--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
                 </ul>
             </div>
         </header>
-        <img src="https://drive.google.com/file/d/1OSwfXSpLfSSPorK9s9VdO_9Dx2f19d4c/view?usp=drive_link" alt="Cats vs dogs img">
+        <img src="https://drive.google.com/file/d/1OSwfXSpLfSSPorK9s9VdO_9Dx2f19d4c/view?usp=sharing" alt="Cats vs dogs img">
         {% block body %}{% endblock %}
     </body>
 </html>
