--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,7 +26,7 @@
                 </ul>
             </div>
         </header>
-        <img src="https://drive.google.com/uc?export=view&id=1OSwfXSpLfSSPorK9s9VdO_9Dx2f19d4c" alt="Cats vs dogs img">
+        <img src="https://drive.google.com/uc?export=view&id=1OSwfXSpLfSSPorK9s9VdO_9Dx2f19d4c" alt="Cats vs dogs img", width="900">
         {% block body %}{% endblock %}
     </body>
 </html>
