--- a/static/styles.css
+++ b/static/styles.css
@@ -22,6 +22,13 @@ h1 {
     text-decoration: none;
     font-size: 17px;
   }
+
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
   
   .topnav a:hover {
     background-color: #ddd;
