--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <link href="/static/styles.css" rel="stylesheet">
         <title>
+            Dogs vs Cats -
             {% block title %}
             {% endblock %}
         </title>
