--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,8 @@
 {% endblock %}
 {% block body %}
 
+    <img src="https://drive.google.com/uc?export=view&id=1OSwfXSpLfSSPorK9s9VdO_9Dx2f19d4c" alt="Cats vs dogs img", width="1200", class="center">
+    <hr>
     <h1>
         hoi
     </h1>
