--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
             <div class="topnav container">
                 <ul class="nav">
                     <h1>
-                        Cat vs Dogs!
+                        <a class="nav-link" href="/">Cat vs Dogs!</a>  
                     </h1>
                     {% if session["user_id"] %}
                         <a class="nav-link" style="text-align: right;" href="/post">Make a post</a>    
@@ -27,9 +27,6 @@
                 </ul>
             </div>
         </header>
-        {% if session["user_id"] %}
-        <img src="https://drive.google.com/uc?export=view&id=1OSwfXSpLfSSPorK9s9VdO_9Dx2f19d4c" alt="Cats vs dogs img", width="1200", class="center">
-        {% endif %}
         {% block body %}{% endblock %}
     </body>
 </html>
