--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,8 +14,8 @@
         <header>
             <div class="topnav container">
                 <ul class="nav">
-                    <h1>
-                        <a class="nav-link" href="/">Cat vs Dogs!</a>  
+                    <h1 class="nav-link" href="/">
+                        Cat vs Dogs!
                     </h1>
                     {% if session["user_id"] %}
                         <a class="nav-link" style="text-align: right;" href="/post">Make a post</a>    
