--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,9 +14,7 @@
         <header>
             <div class="topnav container">
                 <ul class="nav">
-                    <h1 class="nav-link" href="/">
-                        Cat vs Dogs!
-                    </h1>
+                    <h1><a href="/">Cat vs Dogs!</a></h1>
                     {% if session["user_id"] %}
                         <a class="nav-link" style="text-align: right;" href="/post">Make a post</a>    
                         <a class="nav-link" style="text-align: right;" href="/logout">Log Out</a>                    
