Main page 4.2 oops

--- a/templates/apology.html
+++ b/templates/apology.html
@@ -6,8 +6,8 @@
 
 {% block body %}
 
-    {% for image in images %}
-        <img class="postimg", src="{{ image['address']}}">
-    {% endfor %}
+    <h1>
+        {{ message }}
+    </h1>
 
 {% endblock %}
