--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 
-    <img src="https://drive.google.com/uc?export=view&id=1OSwfXSpLfSSPorK9s9VdO_9Dx2f19d4c" alt="Cats vs dogs img", width="1200", class="center">
+    <img href="/static/Cats vs Dogs.png" alt="Cats_vs_dogs_img", width="1200", class="center">
     <hr>
     {% for image in images %}
         <img class="postimg", src="{{ image['address']}}">
