--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,12 +3,9 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="initial-scale=1, width=device-width">
+        <link href="/static/favicon-16x16.png">
         <link href="/static/styles.css" rel="stylesheet">
-        <title>
-            Dogs vs Cats -
-            {% block title %}
-            {% endblock %}
-        </title>
+        <title>Dogs vs Cats - {% block title %}{% endblock %}</title>
     </head>
     <body>
         <header>
