--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 
-    <img href="/static/Cats vs Dogs.png" alt="Cats_vs_dogs_img", width="1200", class="center">
+    <img src="/static/Cats vs Dogs.png" alt="Cats_vs_dogs_img", width="1200", class="center">
     <hr>
     {% for image in images %}
         <img class="postimg", src="{{ image['address']}}">
