--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="initial-scale=1, width=device-width">
-        <link href="/static/favicon-16x16.png">
+        <link href="/static/favicon-16x16.png" rel="icon">
         <link href="/static/styles.css" rel="stylesheet">
         <title>Dogs vs Cats - {% block title %}{% endblock %}</title>
     </head>
