--- a/static/styles.css
+++ b/static/styles.css
@@ -33,6 +33,7 @@ a.nav-link {
   width: 800;
   height: min-content;
   border: 4px solid lightslategray;
+  display: inline;
 }
   
 .topnav a:hover {
