--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <img src="/static/Cats vs Dogs.png" alt="Cats_vs_dogs_img", width="1200", class="center">
     <hr>
     {% for image in images %}
-        <div class='post'>
+        <div>
             <img class="postimg center", src="{{ image['address']}}">
             {% if admin == 1 %}
                 <form action="/" method="post"><button name="admin" value="{{ image['id']}}"><img class="admin", src="/static/Red_X.png"></button></form>
