--- a/templates/home.html
+++ b/templates/home.html
@@ -8,10 +8,10 @@
     <img src="/static/Cats vs Dogs.png" alt="Cats_vs_dogs_img", width="1200", class="center">
     <hr>
     {% for image in images %}
-        <div>
-            <img class="postimg center", src="{{ image['address']}}">
+        <div id="parent">
+            <div class="child"><img class="postimg center", src="{{ image['address']}}"></div>
             {% if admin == 1 %}
-                <form action="/" method="post"><button name="admin" value="{{ image['id']}}"><img class="admin", src="/static/Red_X.png"></button></form>
+            <div class="child"><form action="/" method="post"><button name="admin" value="{{ image['id']}}"><img class="admin", src="/static/Red_X.png"></button></form></div>
             {% endif %}
         </div>
     {% endfor %}
