--- a/templates/home.html
+++ b/templates/home.html
@@ -8,12 +8,12 @@
     <img src="/static/Cats vs Dogs.png" alt="Cats_vs_dogs_img", width="1200", class="center">
     <hr>
     {% for image in images %}
-        <li>
-            <img class="postimg", src="{{ image['address']}}">
+        <div id="parent">
+            <div class="child"><img class="postimg", src="{{ image['address']}}"></div>
             {% if admin == 1 %}
-            <form action="/" method="post"><button name="admin" value="{{ image['id']}}"><img class="admin", src="/static/Red_X.png"></button></form></div>
+            <div class="child"><form action="/" method="post"><button name="admin" value="{{ image['id']}}"><img class="admin", src="/static/Red_X.png"></button></form></div>
             {% endif %}
-        </li>
+        </div>
     {% endfor %}
 
 {% endblock %}
