--- a/static/styles.css
+++ b/static/styles.css
@@ -50,9 +50,11 @@ body {
   height: min-content;
   background-color: transparent !important;
 }
-.parent {
+
+#parent {
   text-align: center;
 }
+
 .child {
   display: inline-block;
 }
