--- a/static/styles.css
+++ b/static/styles.css
@@ -49,7 +49,7 @@ body {
   width: 50; 
   height: min-content;
   background-color: transparent !important;
-  vertical-align: top;
+  vertical-align: text-top;
 }
 
 #parent {
