--- a/static/styles.css
+++ b/static/styles.css
@@ -30,7 +30,7 @@ a.nav-link {
 }
 
 .postimg {
-  width: 2000;
+  min-width: 300;
   object-fit: contain;
   border: 4px solid lightslategray;
   text-align: center;
