--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             <div class="child"><form action="/" method="post"><button name="admin" value="{{ image['id']}}"><img class="admin", src="/static/Red_X.png"></button></form></div>
             {% endif %}
         </div>
-        <p style="text-align: center;">Post by: {{ users[image['user_id']]['id'] }}</p>
+        <p style="text-align: center;">Post by: {{ image['username'] }}</p>
         <br>
     {% endfor %}
 
