--- a/static/styles.css
+++ b/static/styles.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 .topnav {
-  background-color: #28acd4;
+  background-color: #28aad2;
   overflow: hidden;
   }
   
@@ -59,5 +59,9 @@ body {
 
 .child {
   display: inline-block;
+}
+
+#post {
+  background-color: #28aad2 !important;
 }
   
