--- a/templates/home.html
+++ b/templates/home.html
@@ -8,13 +8,15 @@
     <img src="/static/Cats vs Dogs.png" alt="Cats_vs_dogs_img", width="1200", class="center">
     <hr>
     {% for image in images %}
-        <div id="parent">
-            <div class="child"><img class="postimg", src="{{ image['address']}}"></div>
-            {% if admin == 1 %}
-            <div class="child"><form action="/" method="post"><button name="admin" value="{{ image['id']}}"><img class="admin", src="/static/Red_X.png"></button></form></div>
-            {% endif %}
+        <div id="post">
+            <div id="parent">
+                <div class="child"><img class="postimg", src="{{ image['address']}}"></div>
+                {% if admin == 1 %}
+                <div class="child"><form action="/" method="post"><button name="admin" value="{{ image['id']}}"><img class="admin", src="/static/Red_X.png"></button></form></div>
+                {% endif %}
+            </div>
+            <p style="text-align: center;">Post by: {{ image['username'] }}</p>
         </div>
-        <p style="text-align: center;">Post by: {{ image['username'] }}</p>
         <br>
     {% endfor %}
 
