--- a/static/styles.css
+++ b/static/styles.css
@@ -63,7 +63,7 @@ body {
 
 #post {
   text-align: center;
-  width: 25%;
-  padding: 10px solid #28aad2;
+  width: 700px;
+  border: 10px solid #28aad2;
 }
   
