--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <link href="/static/favicon-16x16.png" rel="icon">
         <link href="/static/styles.css" rel="stylesheet">
+        <meta name="referrer" content="no-referrer">
         <title>Cats vs Dogs - {% block title %}{% endblock %}</title>
     </head>
     <body>
