--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,8 @@
                 <div class="child"><form action="/" method="post"><button name="admin" value="{{ image['id']}}"><img class="admin", src="/static/Red_X.png"></button></form></div>
                 {% endif %}
             </div>
-            <div>
-                <p>Post by: {{ image['username'] }}</p>
+            <p style="text-align: center;">Post by: {{ image['username'] }}</p>
+            <div style="text-align: center;">
                 <form action="/" method="post"><button name="like" value="{{ image['id']}}"><img src="/static/like.png"></button></form>
             </div>
         </div>
