--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
             </div>
             <p style="text-align: center;">Post by: {{ image['username'] }}</p>
             <div style="text-align: center;">
-                <form action="/" method="post"><button name="like" value="{{ image['id']}}"><img src="/static/like.png"></button></form>
+                <form action="/" method="post"><button name="like" class="like" value="{{ image['id']}}"><img src="/static/like.png"></button></form>
             </div>
         </div>
         <br>
