--- a/static/styles.css
+++ b/static/styles.css
@@ -67,6 +67,10 @@ body {
   border: 10px solid #28aad2;
 }
 
-.like {
-  background-color: red;
+.green {
+  background-color: green;
+}
+
+.transparent {
+  background-color: transparent;
 }
