--- a/templates/post.html
+++ b/templates/post.html
@@ -11,6 +11,11 @@
         <div>
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="image" name="image" placeholder="Image address" type="text">
         </div>
+        <select name="animal" id="animal" multiple>
+            <option value="cat">Cat</option>
+            <option value="dog">Dog</option>
+            <option value="error">Other</option>
+        </select>
         <button class="btn btn-primary" type="submit">Post!</button>
     </form>
 
