--- a/templates/post.html
+++ b/templates/post.html
@@ -11,7 +11,7 @@
         <div>
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="image" name="image" placeholder="Image address" type="text">
         </div>
-        <select name="animal" id="animal" size="1" multiple>
+        <select name="animal" id="animal" size="1">
             <option value="cat">Cat</option>
             <option value="dog">Dog</option>
             <option value="error">Other</option>
