--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 {% block body %}
 
     <img src="/static/Cats vs Dogs.png" alt="Cats_vs_dogs_img", width="1200", class="center">
-    <h2 class="center"> {{ cat }}    VS   {{ dog }}</h2>
+    <h1 style="text-align: center;"> {{ cat }}    VS   {{ dog }}</h2>
     <hr>
     {% for image in images %}
         <div id="post">
