--- a/templates/home.html
+++ b/templates/home.html
@@ -7,13 +7,15 @@
 
     <img src="/static/Cats vs Dogs.png" alt="Cats_vs_dogs_img", width="1200", class="center">
     <h1 style="text-align: center;"> {{ cat }}    VS   {{ dog }}</h2>
-    {% if dog > cat %}
-        <h2>Dogs are winning</h2>
-    {% elif dog < cat %}
-        <h2>Cats are winning</h2>
-    {% else %}
-        <h2>tie</h2>
-    {% endif %}
+    <div style="text-align: center;">
+        {% if dog > cat %}
+            <h2>Dogs are winning</h2>
+        {% elif dog < cat %}
+            <h2>Cats are winning</h2>
+        {% else %}
+            <h2>tie</h2>
+        {% endif %}
+    </div>
     <hr>
     {% for image in images %}
         <div id="post">
